layout - fixed scroll issue on mobile

--- a/styles/components/_emptyScreen.scss
+++ b/styles/components/_emptyScreen.scss
@@ -3,5 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+  text-align: center;
   @include source(1.9rem, 600, $dividers);
 }
